my first commit

--- a/practicals/01 Newtable.html
+++ b/practicals/01 Newtable.html
@@ -55,4 +55,10 @@ body {
   <p>Some text some text some text.</p>
 </div>
 
+<div class="main">
+  <h1>Bottom Navigation Bar</h1>
+  <p>Some text some text some text.</p>
+</div>
+
+
 </body>
