--- a/practicals/dropdown.html
+++ b/practicals/dropdown.html
@@ -21,6 +21,11 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+button { 
+  display: block;
+  padding: 10px;
+  border-radius: 10px;
+}
 </style>
 </head>
 <body>
@@ -34,4 +39,5 @@
       <p>Hello World!</p>
       </div>
     </div>
+    <button>submit</button>
       </body>
