--- a/practicals/index.html
+++ b/practicals/index.html
@@ -127,5 +127,6 @@
             also great for debugging HTML,
             because you can comment out HTML lines of code, 
             one at a time, to search for errors:Comments are also great for debugging HTML,</p>
+            <p title="About W3Schools"> W3Schools is a web developer's site.</p>
     </body>
 </html>
