--- a/practicals/practise4.html
+++ b/practicals/practise4.html
@@ -20,7 +20,7 @@
 
 #customers tr:nth-child(even){background-color: #f2f2f2;}
 
-#customers tr:hover {background-color: #ddd;}
+#customers tr:hover {background-color: aqua;}
 
 #customers th {
   padding-top: 12px;
