--- a/practicals/image.html
+++ b/practicals/image.html
@@ -3,10 +3,14 @@
     <head>
         <meta name="viewport" content="width, initial-scale=1.0"></head>
         <body>
+            <link rel="stylesheet" href="image.css">
 
-            <h2>Onigele Ayo</h2>
-            <picture>
-                <source media=" (min-width: 650px)"srcset="IMG-20231003-WA0003.jpg">
-                <source media="(min-width: 465px)" srcset="IMG-20231006-WA0028.jpg">
-                <img src="IMG-20230930-WA0017.jpg" style="width:auto;">
-            </picture>
+            <h2>Onigele Ayo, The African Heritage</h2>
+            
+                <div class="Flex-container">
+                    <img src="IMG-20230930-WA0017.jpg" style="width:50px;">
+                 <img src="IMG-20230930-WA0021.jpg" style="width:300px;">
+                 <img src="IMG-20230930-WA0021.jpg" style="width: 300px;">
+                 <img src="/images/IMG-20230930-WA0017.jpg" style="width: 300px;">
+                 <img src="/images/IMG-20230930-WA0017.jpg" style="width: 300px;">
+                </div>
